add button in main branch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p>hello saikat is here</p>
     <br>
     <p>this is a feature 1 branch</p>
+    <br>
+    <p>this is a button</p>
 </body>
 </html>
